--- a/style.css
+++ b/style.css
@@ -8,16 +8,44 @@ body{
 .ui.relaxed.grid>.row>.column{
     text-align: center;
 }
+.output-box{
+    background-image: url("./img/Sprinkle.svg");
+    background-repeat: repeat;
+    background-size: contain;
+}
 .output{
-    margin: 2rem auto;
-    padding: 4rem 0;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    background-image: url("./Sprinkle.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
+}
+.output-buttons{
+    padding-top: 2rem;
+    text-align: center;
+}
+.output-buttons-num{
+    min-width: 50px;
+    background-color: rgb(27, 28, 29);
+    display: inline-block;
+    border-radius: 5px;
+    padding: 0.5rem 0;
+}
+.output-margin{
+    margin: 2rem auto;
+    padding: 4rem 0;
+}
+.ui.segment.load-div{
+    width: 100%;
+    height: 40vh;
+    background-color: rgba(0,0,0,.05);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+}
+.ui.inverted.dimmer.load-div-box{
+    background-color: transparent;
+}
+.ui.inverted.dimmer .ui.loader{
+    color: white;
 }
 .ui.card{
     display: inline-block;
@@ -63,6 +91,9 @@ body{
 }
 .ui.card>.image>img{
     height: 200px;
+}
+.ui[class*="left pointing"].label {
+    margin-top: 0.6666em;
 }
 .card-body{
     height: 132px;
