--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     --bg-color: rgb(42, 42, 42);
     --text-color: rgba(245,245,245);
     background-color: var(--bg-color);
     color: var(--text-color);
-    
+    position: relative;
+}
+.btnTop{
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
+    outline: none;
+    color: black;
+    padding: 0.6rem;
+    background-color: rgba(240, 240, 250, 0.8);
+    border-radius: 50%;
+    border: none;
+}
+.btnTop i{
+    margin: 0;
+}
+.btnTop:visited, .btnTop:link, .btnTop:active, .btnTop:hover{
+    background-color: rgba(240, 240, 250, 0.8);
 }
 .ui.relaxed.grid>.row>.column{
     text-align: center;
@@ -20,7 +42,7 @@ body{
     justify-content: center;
 }
 .output-buttons{
-    padding-top: 2rem;
+    padding: 2rem 0;
     text-align: center;
 }
 .output-buttons-num{
@@ -32,11 +54,11 @@ body{
 }
 .output-margin{
     margin: 2rem auto;
-    padding: 4rem 0;
+    padding: 4rem 0 0 0;
 }
 .ui.segment.load-div{
     width: 100%;
-    height: 40vh;
+    height: 50vh;
     background-color: rgba(0,0,0,.05);
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
@@ -126,6 +148,22 @@ body{
 .genre-container-dropdown{
     text-align: center;
     margin: 2rem 0 ;
+}
+.ui.button.page-buttons{
+    margin: 0;
+    cursor: pointer;
+}
+.no-results-title{
+    padding: 8rem 0 0 0;
+    height: 70vh;
+    width: 100%;
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+}
+.hide{
+    display: none;
 }
 @media screen and (min-width: 768px){
     .title-modal{
