--- a/style.css
+++ b/style.css
@@ -138,6 +138,16 @@ body{
 .ui.modal>.content>.image{
     width: inherit;
 }
+.output-search{
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+    background-color: rgba(27, 28, 29, 0.8);
+    padding: 1.5rem 0 1.5rem 1.5rem;
+    margin-top: 0.5rem !important;
+    letter-spacing: 2px;
+    text-shadow: 0px 0px 20px black;
+}
 .genre-container{
     width: 95%;
     margin: 1rem auto;
