--- a/style.css
+++ b/style.css
@@ -8,6 +8,20 @@ body{
     color: var(--text-color);
     position: relative;
 }
+.header{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    background-color: rgb(27, 28, 29);
+    padding: 1rem 0;
+    margin-top: 0.5rem;
+}
+.header div{
+    flex-basis: 30%;
+    margin: 0;
+}
 .btnTop{
     display: block;
     cursor: pointer;
@@ -33,8 +47,21 @@ body{
 .main-title h1{
     margin: 1.5rem 0;
 }
-.ui.container.menu-mobile{
-    margin: 0 auto;
+.menu-mobile{
+    margin: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.menu-mobile div{
+    display: block;
+}
+.search-container{
+    width: 150px;
+}
+.ui.input{
+    width: 112px;
 }
 .ui.dropdown .scrolling.menu, .ui.scrolling.dropdown .menu {
     max-height: 15.28571429rem;
@@ -169,8 +196,8 @@ body{
 }
 .genre-container-dropdown{
     text-align: center;
-    margin: 2rem 0 ;
-    display: inline;
+    margin: 0 ;
+    width: 150px;
 }
 .ui.button.page-buttons{
     margin: 0;
@@ -200,6 +227,12 @@ body{
     .genre-container{
         display: block;
         width: 85%;
+    }
+    .search-container{
+        width: 220px;
+    }
+    .ui.input{
+        width: 180px;
     }
 }
 @media screen and (min-width: 1400px){
