--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     color: var(--text-color);
     position: relative;
 }
-.header{
+.header-nav{
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -30,7 +30,7 @@ body{
     right: 20px;
     outline: none;
     color: black;
-    padding: 0.6rem;
+    padding: 0.6rem 0.5rem;
     background-color: rgba(240, 240, 250, 0.8);
     border-radius: 50%;
     border: none;
@@ -46,6 +46,9 @@ body{
 }
 .main-title h1{
     margin: 1.5rem 0;
+}
+.title-modal__header{
+    font-size: 1.7rem;
 }
 .menu-mobile{
     margin: 0;
